# phong

./: CMakeLists.txt
include/: Camera.hpp  Curve.hpp  EBO.hpp  ObjectByCurveRotate.hpp  Shader.hpp  VAO.hpp  VBO.hpp  Vertex.hpp
res/shaders/: default.frag  default.geom  default.vert
src/: Camera.cpp  EBO.cpp  ObjectByCurveRotate.cpp  Shader.cpp  VAO.cpp  VBO.cpp  main.cpp
